--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,21 +60,21 @@ jobs:
       - name: Lint with ruff
         run: uv run ruff check src tests
 
-  typecheck:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          version: "latest"
-
-      - name: Set up Python
-        run: uv python install 3.12
-
-      - name: Install dependencies
-        run: uv sync --extra dev
-
-      - name: Type check with mypy
-        run: uv run mypy src
+  # typecheck:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #
+  #     - name: Install uv
+  #       uses: astral-sh/setup-uv@v4
+  #       with:
+  #         version: "latest"
+  #
+  #     - name: Set up Python
+  #       run: uv python install 3.12
+  #
+  #     - name: Install dependencies
+  #       run: uv sync --extra dev
+  #
+  #     - name: Type check with mypy
+  #       run: uv run mypy src
